Migrated from Strings to Version and DownloadableRelease objects